(진행중) 리프레시 토큰 적용 - 백엔드 완료
5. 권한(Role) 운영 전략 확정
6. 권한 관리 + 관리자 페이지 (권한 기반 검증 포함)
7. RSA256 보안 강화 (비대칭키 전환)

#TODO LIST
2. 채팅 로직
3. 게임 룰 만들기
4. 틱톡 허가 신청